fix 250 delicacies and bugs, and add some controller, and modified DownUtils.dowoload